set shortcuts div in the center, make it work with links inside and fix the issue with z-index

--- a/style.css
+++ b/style.css
@@ -5,18 +5,6 @@ body {
   justify-content: center;
   margin: 0 auto;
 }
-#header {
-  display: inline-block;
-  background-color: #ffffff;
-  padding: 4px;
-  border-radius: 10px;
-  box-shadow: 0 1px 1px 0 rgb(0 0 0 / 25%);
-}
-#shortcuts {
-  width: 100%;
-  display: inline-block;
-  margin-bottom: 2rem;
-}
 h1 {
   text-align: center;
   padding-bottom: 1rem;
@@ -66,28 +54,25 @@ p {
   justify-content: center;
   width: 50%;
 }
-.logo {
-  height: auto;
-  width: 6rem;
-  display: flex;
-  margin-left: 0.6rem;
-  border-radius: 10px;
-}
-.brand-title {
-  margin: 0.5rem auto;
-  width: 1000px;
-}
 .shortcuts-links {
-  height: 100%;
-  margin-top: -6rem;
-  align-content: center;
+  width: 80%;
+  margin: 2rem auto;
+  background-color: #fff;
+  align-items: center;
+  height: 90px;
+  border-radius: 10px;
+  box-shadow: 0 1px 1px 0 rgb(0 0 0 / 25%);
+  padding-top: 15px;
+  position: relative;
+  z-index: 1;
 }
 .shortcuts-links ul {
   display: flex;
   margin: 0;
   padding: 0;
   flex-direction: row;
-  margin-left: 50rem;
+  justify-content: space-around;
+  max-width: 80vw;
 }
 .shortcuts-links li {
   list-style: none;
@@ -97,16 +82,7 @@ p {
   text-decoration: none;
   color: #101010;
   padding: 1rem;
-}
-.toggle-button {
-  position: fixed;
-  top: 0.75rem;
-  right: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 21px;
+  z-index: -1;
 }
 .toggle-button .bar {
   height: 3px;
@@ -164,20 +140,9 @@ p {
   }
 }
 @media (max-width: 930px) {
-  #shortcuts {
-    flex-direction: column;
-    align-items: stretch;
-  }
   .shortcuts-links {
-    display: none;
-    width: 100%;
-  }
-  .shortcuts-links ul {
-    width: 100%;
-    flex-direction: column;
-    margin-left: 3.75rem;
-    margin-left: 12rem;
-    margin-top: -3rem;
+    justify-content: center;
+    align-items: center;
   }
   .shortcuts-links li {
     align-content: center;
@@ -204,9 +169,6 @@ p {
   }
 }
 @media (max-width: 550px) {
-  .logo {
-    width: 2.1rem;
-  }
   .carBrandInput,
   .carCylindersInput,
   .countryInput {
@@ -285,7 +247,6 @@ p {
   margin-top: 90px;
   z-index: -2;
   max-width: 100vw;
-  /* margin: 0 auto; */
 }
 .hero::before {
   content: "";
@@ -306,7 +267,3 @@ p {
   letter-spacing: 1px;
   color: #fff;
 }
-/* .container {
-  max-width: 1200px;
-  margin: 0 auto;
-} */
